# py-grove-watcher

./: .coveragerc  .env  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test.py
.github/workflows/: upload_to_pypi.yml
src/grove_watcher/: __init__.py  __main__.py  _version.py  models.py  ts_lang_fetcher.py  venv_manager.py
src/grove_watcher/config/: config.json  config.py  logger_loader.py  logging.json
tests/: conftest.py  test_ts_lang_fetcher.py  test_venv_manager.py
